Fix: fixes alert text alignment on faq page (#7742)
fixes alert text alignment on faq page

--- a/projects/storefrontstyles/scss/layout/page-templates/_content-page-1.scss
+++ b/projects/storefrontstyles/scss/layout/page-templates/_content-page-1.scss
@@ -18,3 +18,14 @@
     padding: 20px 1.25rem;
   }
 }
+
+.textpage-faqs {
+  td {
+    padding-bottom: 26px;
+    vertical-align: baseline;
+
+    &:first-child {
+      padding-right: 10px;
+    }
+  }
+}
